fix:  fix styling trigger unwanted scrollbar

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,22 +2,26 @@
 @tailwind components;
 @tailwind utilities;
 
-
 html {
-  --color-bg-primary: 249 244 250; 
+  --color-bg-primary: 249 244 250;
   --color-bg-neutral: 238 250 250;
-  --color-primary: 27 23 23; 
+  --color-primary: 27 23 23;
   --color-hightlight-red: 238 86 38;
   --color-hightlight-blue: 30 58 190;
   font-size: 20px;
   scroll-behavior: smooth;
+  overflow-y: scroll;
 }
 
 html.dark {
-  --color-bg-primary: 32 31 31; 
-  --color-bg-neutral: 52 50 50; 
-  --color-primary: 255 255 255; 
-  --color-hightlight-red: 238 86 38; 
+  --color-bg-primary: 32 31 31;
+  --color-bg-neutral: 52 50 50;
+  --color-primary: 255 255 255;
+  --color-hightlight-red: 238 86 38;
   --color-hightlight-blue: 147 197 253;
   font-size: 20px;
+}
+
+.text-shadow {
+  text-shadow: 0 0 4px white;
 }
